--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,9 +1,7 @@
-@import './reset.scss';
-@import './variables/global.scss';
-@import './themes/normal.scss';
-@import './themes/dark.scss';
-
-
+@import "./reset";
+@import "./variables/global";
+@import "./themes/normal";
+@import "./themes/dark";
 
 .app {
     font-size: var(--font-m);
@@ -11,9 +9,11 @@
     color: var(--primary-color);
     min-height: 100vh;
 }
+
 .content-page {
     display: flex;
 }
+
 .page-wrapper {
     flex-grow: 1;
     padding: 15px;
