--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app.dark {
     --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
-    --primary-color: #377037;
-    --secondary-color: #2e442e;
+    --primary-color: #34a334;
+    --secondary-color: #427a42;
     --inverted-primary-color: #3a58b1;
     --inverted-secondary-color: #0449e0;
 }
