--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,6 +2,7 @@
     cursor: pointer;
     color: var(--primary-color);
     padding: 7px 15px;
+    font-family: var(--font-family-main);
 }
 
 .clear {
