--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,4 +5,7 @@
     --secondary-color: #0449e0;
     --inverted-primary-color: #377037;
     --inverted-secondary-color: #2e442e;
+    --skeleton-shadow: #616861;
+    --skeleton-color: #515551;
+    --code-bg: #030403;
 }
