--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,7 @@
     --secondary-color: #427a42;
     --inverted-primary-color: #3a58b1;
     --inverted-secondary-color: #0449e0;
+    --skeleton-shadow: #3a58b1;
+    --skeleton-color: #0449e0;
+    --code-bg: #141313;
 }
