--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -4,6 +4,7 @@
     width: var(--sidebar-width);
     background: var(--inverted-bg-color);
     transition: width 300ms;
+    flex-shrink: 100%;
 }
 
 .switchers {
