--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,5 +8,5 @@
     --skeleton-shadow: #3a58b1;
     --skeleton-color: #0449e0;
     --code-bg: #141313;
-    --card-bg: #353232;
+    --card-bg: #32323578;
 }
