--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -8,5 +8,5 @@
     --skeleton-shadow: #616861;
     --skeleton-color: #515551;
     --code-bg: #030403;
-    --card-bg: #161d16;
+    --card-bg: #060620;
 }
