--- a/src/app/styles/themes/pink.scss
+++ b/src/app/styles/themes/pink.scss
@@ -8,5 +8,5 @@
     --skeleton-shadow: #a58eac;
     --skeleton-color: #754f8b;
     --code-bg: #b1b1b1;
-    --card-bg: #3d3b3b;
+    --card-bg: #61074c;
 }
