fix store, dynamic module, update reducer manager

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,4 +14,6 @@
     --sidebar-width: 300px;
     --modal-z-index: 10;
     --overlay-color: rgba(0 0 0 / 60%);
+    --success-color: rgba(85 197 63 / 100%);
+    --error-color: rgba(219 83 83 / 100%);
 }
