--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -67,3 +67,15 @@
 .disabled {
     opacity: 0.5;
 }
+
+.outline_success {
+    color: var(--success-color);
+    border: 1px solid var(--success-color);
+    background: none;
+}
+
+.outline_error {
+    color: var(--error-color);
+    border: 1px solid var(--error-color);
+    background: none;
+}
