add drawer, add mobile detector

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,7 +12,8 @@
 //     font-family: var(--font-family-main);
 // }
 .app,
-.app_modal {
+.app_modal,
+.app_drawer {
     font-size: var(--font-m);
     color: var(--primary-color);
     font-family: var(--font-family-main);
