add star rating, add rating card

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -12,7 +12,8 @@
     --navbar-height: 50px;
     --sidebar-width-collapsed: 80px;
     --sidebar-width: 300px;
-    --modal-z-index: 10;
+    --modal-z-index: 1000;
+    --overlay-z-index: 100;
     --overlay-color: rgba(0 0 0 / 60%);
     --success-color: rgba(85 197 63 / 100%);
     --error-color: rgba(219 83 83 / 100%);
