--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,13 +1,32 @@
 .app_dark_theme {
     --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
-    --primary-color: #34a334;
-    --secondary-color: #427a42;
-    --inverted-primary-color: #3a58b1;
-    --inverted-secondary-color: #0449e0;
-    --skeleton-shadow: #3a58b1;
-    --skeleton-color: #0449e0;
-    --code-bg: #141313;
-    --card-bg: #32323578;
-    --listbox-bg: #0c0c62;
+    --primary-color: #04ff04;
+    --secondary-color: #049604;
+    --inverted-primary-color: #0232c2;
+    --inverted-secondary-color: #0452ff;
+
+    // redesigned
+    --dark-bg-redesigned: #090F11;
+    --bg-redesigned: #0C1214;
+    --light-bg-redesigned: #151C1F;
+    --text-redesigned: #DBDBDB;
+    --hint-redesigned: #555555;
+    --cancel-redesigned: #D95757;
+    --save-redesigned: #6CD98B;
+    --icon-redesigned: #74A2B2;
+    --accent-redesigned: #5ED3F3;
+
+    // skeleton
+    --skeleton-color: #1515ad;
+    --skeleton-shadow: #2b2be8;
+
+    // code
+    --code-bg: #1212a1;
+
+    // card
+    --card-bg: #0d0d6b;
+
+    // listbox
+    --listbox-bg: #0d0d6b;
 }
