--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,13 +1,32 @@
-.app_light_theme {
+.app_normal_theme {
     --bg-color: #e8e8ea;
     --inverted-bg-color: #090949;
-    --primary-color: #3a58b1;
+    --primary-color: #0232c2;
     --secondary-color: #0449e0;
-    --inverted-primary-color: #377037;
-    --inverted-secondary-color: #2e442e;
-    --skeleton-shadow: #616861;
-    --skeleton-color: #515551;
-    --code-bg: #030403;
-    --card-bg: #060620;
-    --listbox-bg: #377037;
+    --inverted-primary-color: #04ff04;
+    --inverted-secondary-color: #049604;
+
+    // redesigned
+    --dark-bg-redesigned: #FFFFFF;
+    --bg-redesigned: #EFF5F6;
+    --light-bg-redesigned: #E2EEF1;
+    --text-redesigned: #141C1F;
+    --hint-redesigned: #ADBCC0;
+    --cancel-redesigned: #FF7777;
+    --save-redesigned: #62DE85;
+    --icon-redesigned: #5ED3F3;
+    --accent-redesigned: #00C8FF;
+
+    // skeleton
+    --skeleton-color: #fff;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    // code
+    --code-bg: #fff;
+
+    // card
+    --card-bg: #d5d5d7;
+
+    // listbox
+    --listbox-bg: #d5d5d7;
 }
