--- a/src/widgets/NavBar/ui/Navbar.module.scss
+++ b/src/widgets/NavBar/ui/Navbar.module.scss
@@ -1,13 +1,26 @@
 .Navbar {
     width: 100%;
     height: var(--navbar-height);
-    background-color: var(--inverted-bg-color);
+    background: var(--inverted-bg-color);
     display: flex;
     align-items: center;
     padding: 20px;
-    justify-content: end;
 }
 
+.NavbarRedesigned {
+    padding: 16px;
+}
+
+.links,
 .actions {
     margin-left: auto;
+}
+
+.mainLink {
+    margin-right: 15px;
+}
+
+.appName {
+    width: var(--sidebar-width);
+    margin-left: 15px;
 }
