--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -2,6 +2,7 @@
 /* stylelint-disable color-function-notation */
 .appLogoWrapper {
     position: relative;
+    padding-top: 30px;
 }
 
 .gradientBig {
@@ -14,6 +15,7 @@
     height: 300px;
     border-radius: 50%;
     opacity: 0.6;
+    pointer-events: none;
 }
 
 .gradientSmall {
@@ -23,4 +25,5 @@
     background: radial-gradient(30.29% 30.29% at 50% 50%, rgba(94, 211, 243, 0.18) 0%, rgba(94, 211, 243, 0.106) 25.55%, rgba(94, 211, 243, 0.07) 47.27%, rgba(94, 211, 243, 0.038) 69.66%, rgba(94, 211, 243, 0) 100%);
     border-radius: 50%;
     opacity: 0.6;
+    pointer-events: none;
 }
