--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,48 +1,33 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
-    position: relative;
     width: var(--sidebar-width);
     background: var(--inverted-bg-color);
-    transition: width 300ms;
-    flex-shrink: 100%;
-}
+    position: relative;
+    transition: width 0.3s;
 
-.switchers {
-    position: absolute;
-    bottom: 20px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
+    .switchers {
+        position: absolute;
+        bottom: 20px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 
-.lang {
-    margin-left: 20px;
-}
+    .lang {
+        margin-left: 20px;
+    }
 
-.collapseBtn {
-    position: absolute;
-    right: -32px;
-    bottom: 32px;
-}
+    .collapseBtn {
+        position: absolute;
+        right: -32px;
+        bottom: 32px;
+        z-index: 10;
+    }
 
-.items {
-    margin-top: 20px;
-    margin-left: 30px;
-}
-
-.link {
-    margin-left: 10px;
-    opacity: 1;
-}
-
-.icon {
-    fill: var(--inverted-primary-color);
-}
-
-.item {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
+    .items {
+        margin-top: 40px;
+        margin-left: 30px;
+    }
 }
 
 .collapsed {
@@ -50,16 +35,11 @@
 
     .switchers {
         flex-direction: column;
+        align-items: center;
     }
 
     .lang {
         margin-left: 0;
-    }
-
-    .link {
-        opacity: 0;
-        transition: opacity 200ms;
-        width: 0;
     }
 }
 
@@ -68,8 +48,52 @@
     width: 220px;
     height: 100%;
     border-radius: 32px;
+    position: relative;
+
+    .appLogo {
+        padding-top: 20px;
+    }
+
+    .items {
+        margin-top: 40px;
+    }
+
+    .collapseBtn {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        z-index: 10;
+        transform: rotate(180deg);
+    }
+
+    .switchers {
+        position: absolute;
+        bottom: 40px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        gap: 16px;
+    }
 }
 
-.AppLogo {
-    padding-top: 20px;
+.collapsedRedesigned {
+    width: 50px;
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .items {
+        display: flex;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
+
+    .collapseBtn {
+        transform: rotate(-360deg);
+    }
 }
