--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -38,3 +38,23 @@
 .gap_24 {
     padding: 24px;
 }
+
+.border_0 {
+    border-radius: 0;
+}
+
+.border_8 {
+    border-radius: 8px;
+}
+
+.border_16 {
+    border-radius: 16px;
+}
+
+.border_24 {
+    border-radius: 24px;
+}
+
+.border_40 {
+    border-radius: 40px;
+}
