--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -1,36 +1,26 @@
 .Button {
     cursor: pointer;
     color: var(--text-redesigned);
-    padding: 7px 15px;
-    font-family: var(--font-family-main);
+    padding: 6px 15px;
+
     &:hover {
         color: var(--accent-redesigned);
     }
 }
 
 .clear {
+    padding: 0;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.filled {
+    background: var(--light-bg-redesigned);
     border: none;
     outline: none;
-    background: none;
-    padding: 0;
-}
-
-.outline {
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    background: none;
-}
-
-.background {
-    background-color: var(--bg-color);
-    color: var(--primary-color);
-    border: none;
-}
-
-.backgroundInverted {
-    background-color: var(--inverted-bg-color);
-    color: var(--inverted-primary-color);
-    border: none;
+    padding: 8px 16px;
+    border-radius: 34px;
 }
 
 .square {
@@ -40,19 +30,16 @@
 .square.m {
     width: var(--font-line-m);
     height: var(--font-line-m);
-    font: var(--font-m);
 }
 
 .square.l {
     width: var(--font-line-l);
     height: var(--font-line-l);
-    font: var(--font-l);
 }
 
 .square.xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
-    font: var(--font-xl);
 }
 
 .m {
@@ -71,14 +58,6 @@
     opacity: 0.5;
 }
 
-.outline_success {
-    color: var(--success-color);
-    border: 1px solid var(--success-color);
-    background: none;
-}
-
-.outline_error {
-    color: var(--error-color);
-    border: 1px solid var(--error-color);
-    background: none;
+.fullWidth {
+    width: 100%;
 }
