list view redesigned

--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -5,6 +5,10 @@
     padding-top: 30px;
 }
 
+.AppLogo {
+    position: relative;
+    z-index: 10;
+}
 .gradientBig {
     position: absolute;
     background: radial-gradient(57.05% 57.05% at 49.84% 42.95%,
