--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -23,6 +23,7 @@
 .addonRight svg, .addonLeft svg {
     fill: var(--hint-redesigned);
 }
+
 .clear {
     padding: 0;
     border: none;
@@ -36,6 +37,17 @@
     outline: none;
     padding: 8px 16px;
     border-radius: 34px;
+}
+
+.outline {
+    background: none;
+    border: 1px solid var(--icon-redesigned);
+    padding: 8px 16px;
+    border-radius: 34px;
+
+    &:hover {
+        border: 1px solid var(--accent-redesigned);
+    }
 }
 
 .square {
