--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -6,29 +6,7 @@
     margin: 0 auto;
 }
 
-.title {
-    margin-top: 20px;
-}
-
-.skeleton {
-    margin-top: 15px;
-}
-
-.articleInfo {
-    display: flex;
-    align-items: center;
-}
-
-.icon {
-    margin-right: 8px;
-}
-
-.avatarWrapper {
-    display: flex;
+.img {
     width: 100%;
-    justify-content: center;
-}
-
-.block {
-    margin-top: 16px;
+    max-height: 420px;
 }
